--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,3 +1,17 @@
 ja:
   hello: "ハローワールド"
   comname: "学園陣"
+  Show: "表示"
+  Edit: "編集"
+  Destroy: "削除"
+  students:
+    new: "新規生徒登録"
+    list: "生徒一覧"
+    name: "名前"
+    address: "住所"
+    phone: "電話番号"
+    email: "電子メール"
+    birth: "生年月日"
+    admitted: "入学日"
+    graduated: "卒業日"
+
