--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,13 +4,22 @@ ja:
   Show: "表示"
   Edit: "編集"
   Destroy: "削除"
+  Back: "戻る"
+  name: "名前"
+  address: "住所"
+  phone: "電話番号"
+  email: "メールアドレス"
+  admitted: "入学日"
+  graduated: "卒業日"
+  birth: "生年月日"
   students:
     new: "新規生徒登録"
+    edit: "生徒情報の編集"
     list: "生徒一覧"
-    name: "名前"
-    address: "住所"
-    phone: "電話番号"
-    email: "電子メール"
-    birth: "生年月日"
-    admitted: "入学日"
-    graduated: "卒業日"
+    name: "生徒名"
+    address: "生徒住所"
+    phone: "生徒電話番号"
+    email: "生徒のメールアドレス"
+    birth: "生徒生年月日"
+    admitted: "生徒入学日"
+    graduated: "生徒卒業日"
