--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -12,6 +12,8 @@ ja:
   admitted: "入学日"
   graduated: "卒業日"
   birth: "生年月日"
+  teacher: "教師"
+  student: "生徒"
   students:
     new: "新規生徒登録"
     edit: "生徒情報の編集"
@@ -23,6 +25,8 @@ ja:
     birth: "生徒生年月日"
     admitted: "生徒入学日"
     graduated: "生徒卒業日"
+  schedule: "定刻"
+  syllabus: "授業計画"
   syllabuses:
     new: "新規授業計画"
     edit: "授業計画の編集"
@@ -31,3 +35,9 @@ ja:
     name: "授業名"
     description: "授業説明"
     credits: "単位数"
+  school_class: "授業"
+  school_classes:
+    new: "新規授業"
+    edit: "授業の編集"
+    list: "授業一覧"
+    code: "授業コード"
