--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -26,6 +26,7 @@ ja:
     admitted: "生徒入学日"
     graduated: "生徒卒業日"
   schedule: "定刻"
+  combined_code: "総合コード"
   syllabus: "授業計画"
   syllabuses:
     new: "新規授業計画"
