--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -27,6 +27,7 @@ ja:
     graduated: "生徒卒業日"
   schedule: "定刻"
   combined_code: "総合コード"
+  class_management: "授業管理"
   syllabus: "授業計画"
   syllabuses:
     new: "新規授業計画"
