--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,6 @@ en:
     birth: "Birth Date"
     admitted: "Admitted"
     graduated: "Graduated"  
-  course_management: "Course Management"
+  course_management:
     list_syllabuses: "List Syllabuses"
     list_courses: "List Courses"  
