added course management.title to en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,5 +15,6 @@ en:
     admitted: "Admitted"
     graduated: "Graduated"  
   course_management:
+    title: 'Course Management'
     list_syllabuses: "List Syllabuses"
     list_courses: "List Courses"  
