Kendo UI is surprisingly hard to use

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -60,8 +60,13 @@ ja:
   class_group_enrollments:
     list: "クラス名簿"
   grades:
+    grading: "採点"
+    weighting: "重み付け"
+    weighting_portion: "重み付け率"
     average_points: "平均点数"
+    average_score: "平均点数"
     total_points: "総合点数"
+    max_points: "最高点数"
     rank: "ランク"
   assignments:
     list: "課題一覧"
@@ -76,7 +81,6 @@ ja:
     view: "試験参照"
     new: "新規試験登録"
   execution_date: "実行日"
-  grading: "採点"
   options: "オプション"
 
   and: "と"
