--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,5 +72,15 @@ en:
     list: "Exams"
     plural: "Exams"
     view: "View Exams"
-
+  config:
+    label: "Config"
+    close: "Close"
+    save: "Save changes"
+    help:
+      language: choose your language
+      
+  language: "Language"
+  lang:
+    ja: "Japanese"
+    en: "English"
   and: " and "
