--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
   confirm_delete: "本当に削除しますか?"
   panel: "パネル"
   name: "名前"
+  phonetic: "フリガナ"
   address: "住所"
   phone: "電話番号"
   email: "メールアドレス"
@@ -96,10 +97,10 @@ ja:
     en: "英語"
   profile: "プロフィール"
   guardian:
-    label: "保護者"
+    guardian: "保護者"
     plus: "保護者を追加"
   note:
-    label: "備考"
+    note: "備考"
     title: "題名"
     content: "本文"
     plus: "備考を追加"
