--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,9 @@ en:
   confirm_delete: "Really Delete this record?"
   panel: "Panel"
   name: "Name"
+  surname: "Surname"
+  given_name: "Given Name"
+  phonetic_reading: "Phonetic Reading"
   address: "Address"
   phone: "Phone Number"
   email: "Mail Address"
@@ -84,3 +87,18 @@ en:
     en: "English"
   and: " and "
   submit: "Submit"
+  zipcode: "ZIP Code"
+  prefecture: "State/Province/Prefecture"
+  gender: "Sex"
+  male: "Male"
+  female: "Female"
+  profile: "Profile"
+  guardian:
+    guardian: "Guardian"
+    add: "Add Guardian"
+  note:
+    notes: "Notes"
+    title: "Title"
+    content: "Content"
+    add: "Add Note"
+  class: Class
