--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,9 @@ ja:
   confirm_delete: "本当に削除しますか?"
   panel: "パネル"
   name: "名前"
-  phonetic: "フリガナ"
+  surname: "姓"
+  given_name: "名"
+  phonetic_reading: "フリガナ"
   address: "住所"
   phone: "電話番号"
   email: "メールアドレス"
@@ -95,15 +97,6 @@ ja:
   lang:
     ja: "日本語"
     en: "英語"
-  profile: "プロフィール"
-  guardian:
-    guardian: "保護者"
-    plus: "保護者を追加"
-  note:
-    note: "備考"
-    title: "題名"
-    content: "本文"
-    plus: "備考を追加"
   and: "と"
   submit: "登録する"
   zipcode: "郵便番号"
@@ -111,3 +104,13 @@ ja:
   gender: "性別"
   male: "男性"
   female: "女性"
+  profile: "プロフィール"
+  guardian:
+    guardian: "保護者"
+    add: "保護者を追加"
+  note:
+    notes: "備考"
+    title: "題名"
+    content: "本文"
+    add: "備考を追加"
+  class: クラス
