[view/specs] add flashesh and counters to courses index, specs for them + few refactorings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,7 +145,7 @@ en:
     plural: "Courses"
     new: "New Course"
     edit: "Edit Course"
-    list: "Courses list"
+    list: "Courses List"
     code: "Course Code"
     code_sample: "[EX: FALL2020]"
     save: "Save course"
