[spec/requests] Refactor class_groups/semesters_spec and class_groups/courses_spec

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -353,7 +353,7 @@ en:
     edit: "Edit note"
   class: Class
   semesters:
-    semesters: "Semesters"
+    plural: "Semesters"
     list: "Semesters list"
     starting: "Starting"
     ending:   "Ending"
