--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,7 +66,7 @@ en:
   addresses:
     created: 'Address was successfully created.'
     destroyed: 'Address was successfully destroyed.'
-    addresses: "Addresses"
+    plural: "Addresses"
     singular: "Address"
     new: "New Address"
     add: "Add Address"
