--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -331,6 +331,8 @@ ja:
     delete: "備考を削除"
     save: "備考を保存"
     edit: "備考を編集"
+    created: 'Note was successfully created.'
+    destroyed: 'Note was successfully destroyed.'
   class: "クラス"
   semesters:
     semesters: "学期"
