[fix] students guardian contacts flash message for create not show up

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -302,7 +302,7 @@ en:
     actions: 'Actions'
     list: "Contacts list"
     contacts: "Contacts"
-
+    contact_created: 'Contact successfully created.'
   schools:
     singular: "School"
     plural: "Schools"
