[fix] confirm dialog for guardian address when make primary + fixng specs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -54,6 +54,7 @@ en:
   search: "Search"
   hide: "Hide"
   description: 'Description'
+  confirm: 'Are you sure?'
   attachments:
     assets: 'Assets'
     file_name: 'File name'
