--- a/core/config/locales/devise.en.yml
+++ b/core/config/locales/devise.en.yml
@@ -44,7 +44,7 @@ en:
         inactive: 'inactive'
         unconfirmed: 'unconfirmed'
         locked: 'locked'
-      sign_up: ''
+      sign_up: 'Sign Up'
       
     unlocks:
       send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
