--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -425,3 +425,18 @@ en:
     order: "Order"
     phase_handler: "Phase handler"
     name: "Phase name"
+
+  admission_phase_states:
+    singular: "Admission Phase State"
+    plural: "Admission Phase States"
+    new: "New Admission Phase State"
+    add: "Add Admission Phase State"
+    save: "Save Admission Phase State"
+    list: "Admission Phase States list"
+    edit: "Edit Admission Phase State"
+    order: "Order"
+    name: "State name"
+    can_progress: "Can progress"
+    can_admit: "Can admit"
+    auto_admit: "Auto admit"
+    remove: "Remove state"
