--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -9,6 +9,7 @@ en:
     disposals: 'Disposals'
     types: 'Types'
     admission_methods: "Admission Methods"
+    admission_periods: "Admission Periods"
     presets:
       presets: "Presets"
       student: "Student Preset"
