--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -17,6 +17,10 @@ en:
       locale: "Locale Preset"
       save: 'Save'
       updated: 'Presets Updated'
+      grading:
+        grading: 'Grading Preset'
+        grading_method: 'Grading Method'
+        grading_scheme: 'Grading Scheme'
       students:
         gender: 'Gender'
         country: 'Country'
