[fix] locale for auto progress string

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -451,6 +451,7 @@ en:
     can_progress: "Can progress"
     can_admit: "Can admit"
     auto_admit: "Auto admit"
+    auto_progress: 'Auto progress'
     remove: "Remove state"
 
   admission_periods:
