--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  language: "Language"
   languages:
     en: "English"
     ja: "日本語[Japanese]"
@@ -47,17 +48,20 @@ en:
       commute_methods: "Commute Methods"
     admission_methods: "Admission Methods"
     admission_periods: "Admission Periods"
-    presets:
-      presets: "Presets"
-      student: "Student Preset"
-      locale: "Locale Preset"
+    preset:
+      items:
+        student: "Student Preset"
+        locale: "Locale Preset"
+        grading: "Grading Preset"
+      plural: "Presets"
+      singular: "Preset"
+
       save: 'Save'
-      updated: 'Presets Updated'
+      #updated: 'Presets Updated'
       grading:
-        grading: 'Grading Preset'
         grading_method: 'Grading Method'
         grading_scheme: 'Grading Scheme'
-      students:
+      student:
         gender: 'Gender'
         country: 'Country'
         state: 'State'
@@ -384,7 +388,7 @@ en:
     help:
       language: "Choose your Language"
 
-  language: "Language"
+  #language: "Language"
   and: " and "
   submit: "Submit"
 
