Refactor locals for exams

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -315,6 +315,7 @@ en:
     name: "Exam name"
     description: "Description"
     adjustments: "Adjustments"
+    options: "Options"
     weight: "Weight"
     total_weight: "Total Weight"
     use_weighting: "Use Weighting"
@@ -472,9 +473,11 @@ en:
     description: "Description"
     adjustments: "Adjustments"
     execution_date: "Execution date"
+    use_weighting: "Use Weighting"
     is_master: "Master"
     master: "Master exam portion"
     save: "Save exam portion"
+    edit: "Edit Exam Portion"
     show: "Show Exam Portion"
     attached_file_count: 'Attached file count'
   options: "Options"
