--- a/core/config/locales/ja.yml
+++ b/core/config/locales/ja.yml
@@ -1,79 +1,5 @@
 ja:
-  language: 言語
-  languages:
-    en: English[英語]
-    ja: 日本語
-
-  #inherited_resources
-  #https://github.com/plataformatec/responders/blob/master/lib/responders/flash_responder.rb
-  flash:
-    actions:
-      create:
-        notice: ! '%{resource_name}は正常に作成されました'
-      destroy:
-        alert: ! '%{resource_name}は消去出来ませんでした'
-        notice: ! '%{resource_name}は正常に消去されました'
-      update:
-        notice: ! '%{resource_name}は正常に更新されました'
-
-  notice:
-    added: ! '%{resource}は正常に追加されました'
-    created: ! '%{resource}は正常に作成されました'
-    destroyed: ! '%{resource}は正常に消去されました'
-    enrolled: ! '%{resource}は%{to}に正常に追加されました'
-    no_resource_assign_first: ! '%{resource}はありません、一つ登録してください'
-    recovered: ! '%{resource}は正常に復元されました'
-    removed: ! '%{resource}は正常に削除されました'
-    updated: ! '%{resource}は正常に更新されました'
-    uploaded: ! '%{resource}は正常にアップロードされました'
-
-  alert:
-    already_added: ! '%{resource}が既に登録されています!'
-    empty: ! '%{resource}が空です!'
-    not_selected: ! '%{resource}が未選択です!'
-
-  hello: ハローワールド
-  comname: 学園陣
-  show: 照会
-  edit: 編集
-  destroy: 消去
-  delete: 削除
-  back: 戻る
-  cancel: キャンセル
   add: 追加
-  default: デフェルト
-  birth_date: 生年月日
-  title: タイトル
-  required: 必須
-  manage: 管理する
-  confirm_delete: 本当に削除しますか?
-  panel: パネル
-  name: 名前
-  surname: 姓
-  given_name: 名
-  phonetic_reading: ﾌﾘｶﾞﾅ
-  surname_reading: フリガナ（姓）
-  name_reading: フリガナ（名）
-  none: 未登録
-  date_placeholder: YYYY-MM-DD
-  search: 検索
-  hide: 非表示
-  description: 説明
-  confirm: これで宜しいですか？
-  history: 履歴
-  revert: 元に戻す
-
-  attachment:
-    asset_type: アセットの種類
-    assets: アセット
-    create: アセットを登録
-    description: アセット詳細
-    file_name: ファイル名
-    file_size: ファイルサイズ
-    file_type: ファイル種類
-    name: 名称
-    new: アセットの登録
-
   address:
     add: 住所の追加
     address1: 住所
@@ -95,61 +21,122 @@ ja:
     state: 県・州・地方
     title: 住所のタイトル
     zipcode: 郵便番号
-
-  phone: 電話番号
-  email: メールアドレス
   admitted: 入学日
-  graduated: 卒業日
-  scholarship_status: 諸学金状況 
-  birth_between: の間に生まれた
-  birth_and: と
-
-  commute_method: 通学手段
-  picture: 画像
-  birth: 生年月日
-  teacher: 教師
+  alert:
+    already_added: ! '%{resource}が既に登録されています!'
+    empty: ! '%{resource}が空です!'
+    not_selected: ! '%{resource}が未選択です!'
+  and: と
   are_you_sure: 本当に実効しますか?
-
-  student:
-    add: 生徒を追加
-    birth_and: と
-    birth_between: から
-    chosen_students: 生徒を選択
-    class_group_enrollment: クラスに生徒を追加
-    commute_method: 通勤手段
-    create: 生徒を作成
-    edit: 編集
-    enroll: 生徒を追加
-    export: 生徒を書き出し
-    import: 生徒を読み込み
-    list: 生徒一覧
-    name: 生徒名
-    new: 生徒を登録
-    plural: 生徒
-    registration:
-      csv: CSVで生徒を登録
-      sheet: 出席番号を登録
-    show: 生徒照会
-    singular: 生徒
-
-  enroll_to_class: クラスに登録
-  schedule: 定刻
-  num_enrolled: 在籍人数
-
-  syllabus:
-    code: 科目コード
-    credits: 単位
-    description: 授業の説明
-    edit: 科目を編集
-    list: 科目一覧
-    name: 授業名
-    name_sample: 【例：数学A】
-    new: 科目を登録
-    plural: 科目
-    save: 科目を保存
-    show: 科目照会
-    singular: 科目
-
+  assignment:
+    add: 課題を追加
+    count: 課題総数
+    description: 課題の説明
+    list: 課題一覧
+    max_score: 最大点数
+    name: 課題名称
+    new: 課題の登録
+    plural: 課題
+    results: 課題結果
+    singular: 課題
+    view: 課題詳細を参照
+  assignments:
+    description: 課題の説明
+  attachment:
+    asset_type: アセットの種類
+    assets: アセット
+    create: アセットを登録
+    description: アセット詳細
+    file_name: ファイル名
+    file_size: ファイルサイズ
+    file_type: ファイル種類
+    name: 名称
+    new: アセットの登録
+  back: 戻る
+  birth: 生年月日
+  birth_and: と
+  birth_between: の間に生まれた
+  birth_date: 生年月日
+  campus:
+    add: キャンパスの追加
+    address: キャンパスの住所
+    contacs: キャンパスの連絡先
+    edit: キャンパス情報の編集
+    list: キャンパス一覧
+    name: キャンパス名
+    new: キャンパスを登録
+    plural: キャンパス
+    primary: メイン・キャンパス
+    save: キャンパス情報を保存する
+    singular: キャンパス
+  cancel: キャンセル
+  class: クラス
+  class_group:
+    add: クラスを追加
+    choose: クラス選択
+    edit: クラスを編集
+    enroll: クラスに入籍
+    grade: 学年
+    homeroom: ホームルーム
+    list: クラス一覧
+    name: クラス名
+    new: クラスを登録
+    none: 無し
+    plural: クラス
+    save: クラスを保存
+    show: クラス照会
+    singular: クラス
+  class_group_enrollment:
+    count: 在籍数
+    create: 在籍クラスを作成
+    current: 現在の在籍
+    list: クラス名簿
+    new: 新しいクラス在籍
+    seat_number: 出席番号
+  class_group_management: クラス管理
+  commute_method: 通学手段
+  commute_method_type:
+    add: 通学手段を追加
+    edit: 通学手段を編集
+    list: 通学手段一覧
+    name: 名称
+    new: 通学手段を登録
+    plural: 通学手段種別
+    save: 通学手段種別を保存
+    singular: 通学手段種別
+  comname: 学園陣
+  config:
+    close: 閉じる
+    help:
+      language: 使用する言語を選択してください。
+    label: 設定
+    save: 変更を保存
+  confirm: これで宜しいですか？
+  confirm_delete: 本当に削除しますか?
+  contact:
+    add: 連絡先を追加
+    contact_type: 連絡先種別
+    create: 連絡先を作成
+    data: 連絡先情報
+    details: 連絡先詳細
+    edit: 連絡先を編集
+    emergency: 緊急連絡先
+    list: 連絡先一覧
+    new: 連絡先を登録
+    plural: 連絡先
+    primary: 主要連絡先
+    save: 連絡先を保存
+    singular: 連絡先
+  contact_type:
+    add: 連絡先種別を追加
+    choose: 連絡先種別を選択して下さい
+    edit: 連絡手段を編集
+    list: 連絡先種別一覧
+    name: 連絡先名
+    new: 連絡先種別を登録
+    plural: 連絡先種別
+    save: 連絡先種別を保存
+    singular: 連絡先種別
   course:
     add: 授業を追加
     choose: 授業選択
@@ -167,7 +154,12 @@ ja:
     save: 授業を保存
     show: 授業照会
     singular: 授業
-
+  course_enrollment:
+    add: 授業に生徒を追加
+    create: 生徒を追加
+    list: 在籍者一覧
+    plural: 授業在籍
+    singular: 授業在籍
   course_group:
     course_group_recover: 授業グループを復元
     edit: 授業グループを編集
@@ -178,84 +170,105 @@ ja:
     save: 授業グループを保存
     show: 授業グループ照会
     singular: 授業グループ
-
-  course_enrollment:
-    add: 授業に生徒を追加
-    create: 生徒を追加
-    list: 在籍者一覧
-    plural: 授業在籍
-    singular: 授業在籍
-
+  csv:
+    export: CSVで書き出し
+    fields:
+      email: Eメール
+      gender: 性別
+      name: 名
+      name_reading: フリガナ（名）
+      phone: 電話
+      surname: 姓
+      surname_reading: フリガナ（姓）
+    import: CSVを読み込む
+  date_placeholder: YYYY-MM-DD
+  default: デフェルト
+  delete: 削除
+  description: 説明
+  destroy: 消去
+  devise:
+    confirmations:
+      confirmed: アカウントを登録しました。
+      send_instructions: 登録方法を数分以内にメールでご連絡します。
+      send_paranoid_instructions: もしあなたのEメールアドレスが見つかった場合、本人確認についてのメールが数分以内に送られます。
+    email: 
+    failure:
+      already_authenticated: 既にログインしています。
+      inactive: アカウントがアクティベートされていません。
+      invalid: メールアドレスかパスワードが違います。
+      invalid_token: 認証キーが不正です。
+      locked: あなたのアカウントは凍結されています。
+      timeout: セッションがタイムアウトしました。もう一度ログインしてください。
+      unauthenticated: ログインしてください。
+      unconfirmed: 本登録を行ってください。
+    mailer:
+      confirmation_instructions:
+        subject: アカウントの登録方法
+      reset_password_instructions:
+        subject: パスワードの再設定
+      unlock_instructions:
+        subject: アカウントの凍結解除
+    omniauth_callbacks:
+      failure: ! '%{kind} アカウントによる個人認証に失敗しました（%{reason}）。'
+      success: ! '%{kind} アカウントによる個人認証に成功しました。'
+    password: 
+    password_confirmation: 
+    passwords:
+      forgot: 
+      no_token: このページにはアクセスできません。パスワード復元メールのリンクをコピーした場合には、正しい URL かどうかをお確かめください。
+      send_instructions: パスワードのリセット方法を数分以内にメールでご連絡します。
+      send_paranoid_instructions: もしあなたのEメールアドレスが見つかった場合、パスワード復元用のメールが数分以内に送られます。
+      updated: パスワードを変更しました。
+      updated_not_active: パスワードが正しく変更されました。
+    registrations:
+      destroyed: アカウントを削除しました。またのご利用をお待ちしております。
+      inactive_signed_up: 
+      reasons:
+        inactive: 
+        locked: 
+        unconfirmed: 
+      sign_up: 
+      signed_up: ようこそ！ アカウント登録を受け付けました。
+      signed_up_but_inactive: アカウント登録を受け付けました。しかしまだ有効化されておらず、ログインできません。
+      signed_up_but_locked: アカウント登録を受け付けました。しかし、アカウントが凍結されているためログインできません。
+      signed_up_but_unconfirmed: 本人確認用のメールがあなたのEメールアドレスに送られました。メール内のリンクからアカウントを有効化さ>せてください。
+      update_needs_confirmation: アカウント情報を変更しましたが、Eメールアドレスの本人確認用Eメールをお送りしましたので、中のリンクをクリックして証明してください。
+      updated: アカウント情報を変更しました。
+    sessions:
+      remember_me: 
+      sign_in: 
+      sign_out: 
+      signed_in: ログインしました。
+      signed_out: ログアウトしました。
+    unlocks:
+      send_instructions: アカウントの凍結解除方法を数分以内にメールでご連絡します。
+      send_paranoid_instructions: アカウントが見つかった場合、アカウントの凍結解除方法を数分以内にメールでご連絡します。
+      unlocked: アカウントを凍結解除しました。ログインしています。
+  edit: 編集
+  email: メールアドレス
+  enroll_to_class: クラスに登録
   enrollment:
     plural: 在籍
     singular: 在籍
-
-  assignment:
-    add: 課題を追加
-    count: 課題総数
-    description: 課題の説明
-    list: 課題一覧
-    max_score: 最大点数
-    name: 課題名称
-    new: 課題の登録
-    singular: 課題
-    plural: 課題
-    results: 課題結果
-    view: 課題詳細を参照
-
-  class_group_management: クラス管理
-
-  class_group:
-    add: クラスを追加
-    choose: クラス選択
-    edit: クラスを編集
-    enroll: クラスに入籍
-    grade: 学年
-    homeroom: ホームルーム
-    list: クラス一覧
-    name: クラス名
-    new: クラスを登録
-    none: 無し
-    plural: クラス
-    save: クラスを保存
-    show: クラス照会
-    singular: クラス
-
-  class_group_enrollment:
-    count: 在籍数
-    create: 在籍クラスを作成
-    current: 現在の在籍
-    list: クラス名簿
-    new: 新しいクラス在籍
-    seat_number: 出席番号
-
-  commute_method_type:
-    add: 通学手段を追加
-    edit: 通学手段を編集
-    list: 通学手段一覧
-    name: 名称
-    new: 通学手段を登録
-    plural: 通学手段種別
-    save: 通学手段種別を保存
-    singular: 通学手段種別
-
-  grade:
-    all_exams: 全試験
-    average_points: 平均点
-    average_score: 平均点
-    deviation: 偏差値
-    grading: 採点
-    how_grade: 採点方法
-    max: 最高点数
-    max_points: 最高点数
-    percent: ％
-    points: 点
-    rank: １０段階評価 / ５段階評価
-    total: 合計
-    total_points: 合計点数
-    weighting: 加重率
-    weighting_portion: 試験要素加重率
-
+  enrollment_status_type:
+    active: 在籍中
+    add: 在籍状態を追加
+    edit: 在籍状態を編集
+    list: 在籍状態一覧
+    name: 状態名
+    new: 在籍状態を登録
+    plural: 在籍状態
+    save: 在籍状態を保存
+    singular: 在籍状態
+  errors:
+    messages:
+      already_confirmed: は既に登録済みですのでログインしてください
+      expired: の期限が切れましたので、新しくリクエストしてください
+      not_found: は見つかりませんでした
+      not_locked: は凍結されていません
+      not_saved:
+        one: ! '1 つのエラーにより %{resource} は保存されませんでした:'
+        other: ! '%{count} つのエラーにより %{resource} は保存されませんでした:'
   exam:
     add: 試験を追加
     add_existing: 既存の試験を追加
@@ -281,148 +294,6 @@ ja:
     use_weighting: 加重率を使用
     view: 試験を照会
     weight: 加重率
-
-  config:
-    close: 閉じる
-    help:
-      language: 使用する言語を選択してください。
-    label: 設定
-    save: 変更を保存
-
-  and: と
-  submit: 登録する
-
-  user:
-    info: ユーザー情報
-
-  gender:
-    choose: 性別を選択
-    female: 女性
-    label: 性別
-    male: 男性
-    unknown: 未登録
-
-  profile: プロフィール
-  profiles:
-    new: 新規プロフィール登録
-    save: プロフィールを保存
-
-  guardian:
-    singular: 保護者
-    plural: 保護者
-    new: 保護者を登録
-    guardians: 保護者
-    list: 保護者一覧
-    relationship: 続柄
-    add: 保護者を追加
-    save: 保護者を保存
-    edit: 保護者を編集
-    name: 保護者氏名
-
-  contact_type:
-    add: 連絡先種別を追加
-    choose: 連絡先種別を選択して下さい
-    edit: 連絡手段を編集
-    list: 連絡先種別一覧
-    name: 連絡先名
-    new: 連絡先種別を登録
-    plural: 連絡先種別
-    save: 連絡先種別を保存
-    singular: 連絡先種別
-
-  contact:
-    add: 連絡先を追加
-    contact_type: 連絡先種別
-    create: 連絡先を作成
-    data: 連絡先情報
-    details: 連絡先詳細
-    edit: 連絡先を編集
-    emergency: 緊急連絡先
-    list: 連絡先一覧
-    new: 連絡先を登録
-    plural: 連絡先
-    primary: 主要連絡先
-    save: 連絡先を保存
-    singular: 連絡先
-
-  school:
-    add: 学校を追加
-    campuses: キャンパス
-    code: 学校コード
-    description: 学校の説明
-    edit: 学校を編集
-    edit_master: 主要学校を編集
-    founded: 設立日
-    grades: 学年設定
-    list: 学校一覧
-    master: 主要学校
-    name: 学校名
-    new: 学校を登録
-    plural: 学校
-    primary: 主要学校
-    principal: 学長
-    save: 学校を保存
-    singular: 学校
-    slogan: 校訓
-    vice_principal: 教頭
-
-  campus:
-    add: キャンパスの追加
-    address: キャンパスの住所
-    contacs: キャンパスの連絡先
-    edit: キャンパス情報の編集
-    list: キャンパス一覧
-    name: キャンパス名
-    new: キャンパスを登録
-    plural: キャンパス
-    primary: メイン・キャンパス
-    save: キャンパス情報を保存する
-    singular: キャンパス
-
-  enrollment_status_type:
-    active: 在籍中
-    add: 在籍状態を追加
-    edit: 在籍状態を編集
-    list: 在籍状態一覧
-    name: 状態名
-    new: 在籍状態を登録
-    plural: 在籍状態
-    save: 在籍状態を保存
-    singular: 在籍状態
-
-  note:
-    add: 備考を追加
-    content: 本文
-    delete: 備考を削除
-    edit: 備考を編集
-    list: 備考一覧
-    new: 備考を登録
-    plural: 備考
-    save: 備考を保存
-    singular: 備考
-    title: 備考タイトル
-
-  class: クラス
-
-  semester:
-    add: 学期を追加
-    edit: 学期を編集
-    ending: 学期終了日
-    ending_after_starting: 開始後に終了して下さい
-    list: 学期一覧
-    number: 学期番号
-    plural: 学期
-    save: 学期を保存
-    starting: 開始
-    uniqueness: 既に追加された学期です
-
-  select: 選択
-  period: 期間
-
-  pictures:
-    change: 写真を変更
-    upload: 写真をアップロード
-
   exam_portion:
     adjustments: 調整
     attached_file_count: 添付ファイル数
@@ -440,26 +311,62 @@ ja:
     show: 試験要素照会
     use_weighting: 加重率を使用
     weight: 加重率
-
-  options: オプション
-
-  import_format: インポート形式
+  flash:
+    actions:
+      create:
+        notice: ! '%{resource_name}は正常に作成されました'
+      destroy:
+        alert: ! '%{resource_name}は消去出来ませんでした'
+        notice: ! '%{resource_name}は正常に消去されました'
+      update:
+        notice: ! '%{resource_name}は正常に更新されました'
+  gender:
+    choose: 性別を選択
+    female: 女性
+    label: 性別
+    male: 男性
+    unknown: 未登録
+  given_name: 名
+  grade:
+    all_exams: 全試験
+    average_points: 平均点
+    average_score: 平均点
+    deviation: 偏差値
+    grading: 採点
+    how_grade: 採点方法
+    max: 最高点数
+    max_points: 最高点数
+    percent: ％
+    points: 点
+    rank: １０段階評価 / ５段階評価
+    total: 合計
+    total_points: 合計点数
+    weighting: 加重率
+    weighting_portion: 試験要素加重率
+  graduated: 卒業日
+  guardian:
+    add: 保護者を追加
+    edit: 保護者を編集
+    guardians: 保護者
+    list: 保護者一覧
+    name: 保護者氏名
+    new: 保護者を登録
+    plural: 保護者
+    relationship: 続柄
+    save: 保護者を保存
+    singular: 保護者
+  hello: ハローワールド
   helpers:
     links:
       cancel: キャンセル
-
-  csv:
-    export: CSVで書き出し
-    fields:
-      email: Eメール
-      gender: 性別
-      name: 名
-      name_reading: フリガナ（名）
-      phone: 電話
-      surname: 姓
-      surname_reading: フリガナ（姓）
-    import: CSVを読み込む
-
+  hide: 非表示
+  history: 履歴
+  import_format: インポート形式
+  language: 言語
+  languages:
+    en: English[英語]
+    ja: 日本語
+  manage: 管理する
   menu:
     admin:
       admin: 管理者
@@ -511,8 +418,120 @@ ja:
       plural: 生徒
     syllabus:
       plural: 科目
-
-  assignments:
-    description: 課題の説明
+  name: 名前
+  name_reading: フリガナ（名）
+  none: 未登録
+  note:
+    add: 備考を追加
+    content: 本文
+    delete: 備考を削除
+    edit: 備考を編集
+    list: 備考一覧
+    new: 備考を登録
+    plural: 備考
+    save: 備考を保存
+    singular: 備考
+    title: 備考タイトル
+  notice:
+    added: ! '%{resource}は正常に追加されました'
+    created: ! '%{resource}は正常に作成されました'
+    destroyed: ! '%{resource}は正常に消去されました'
+    enrolled: ! '%{resource}は%{to}に正常に追加されました'
+    no_resource_assign_first: ! '%{resource}はありません、一つ登録してください'
+    recovered: ! '%{resource}は正常に復元されました'
+    removed: ! '%{resource}は正常に削除されました'
+    updated: ! '%{resource}は正常に更新されました'
+    uploaded: ! '%{resource}は正常にアップロードされました'
+  num_enrolled: 在籍人数
+  options: オプション
+  panel: パネル
+  period: 期間
+  phone: 電話番号
+  phonetic_reading: ﾌﾘｶﾞﾅ
+  picture: 画像
+  pictures:
+    change: 写真を変更
+    upload: 写真をアップロード
+  profile: プロフィール
+  profiles:
+    new: 新規プロフィール登録
+    save: プロフィールを保存
+  required: 必須
+  revert: 元に戻す
+  schedule: 定刻
   scholarship_status: 奨学生
-
+  school:
+    add: 学校を追加
+    campuses: キャンパス
+    code: 学校コード
+    description: 学校の説明
+    edit: 学校を編集
+    edit_master: 主要学校を編集
+    founded: 設立日
+    grades: 学年設定
+    list: 学校一覧
+    master: 主要学校
+    name: 学校名
+    new: 学校を登録
+    plural: 学校
+    primary: 主要学校
+    principal: 学長
+    save: 学校を保存
+    singular: 学校
+    slogan: 校訓
+    vice_principal: 教頭
+  search: 検索
+  select: 選択
+  semester:
+    add: 学期を追加
+    edit: 学期を編集
+    ending: 学期終了日
+    ending_after_starting: 開始後に終了して下さい
+    list: 学期一覧
+    number: 学期番号
+    plural: 学期
+    save: 学期を保存
+    starting: 開始
+    uniqueness: 既に追加された学期です
+  show: 照会
+  student:
+    add: 生徒を追加
+    birth_and: と
+    birth_between: から
+    chosen_students: 生徒を選択
+    class_group_enrollment: クラスに生徒を追加
+    commute_method: 通勤手段
+    create: 生徒を作成
+    edit: 編集
+    enroll: 生徒を追加
+    export: 生徒を書き出し
+    import: 生徒を読み込み
+    list: 生徒一覧
+    name: 生徒名
+    new: 生徒を登録
+    plural: 生徒
+    registration:
+      csv: CSVで生徒を登録
+      sheet: 出席番号を登録
+    show: 生徒照会
+    singular: 生徒
+  submit: 登録する
+  surname: 姓
+  surname_reading: フリガナ（姓）
+  syllabus:
+    code: 科目コード
+    credits: 単位
+    description: 授業の説明
+    edit: 科目を編集
+    list: 科目一覧
+    name: 授業名
+    name_sample: 【例：数学A】
+    new: 科目を登録
+    plural: 科目
+    save: 科目を保存
+    show: 科目照会
+    singular: 科目
+  teacher: 教師
+  title: タイトル
+  user:
+    info: ユーザー情報
